--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <!-- chamando js com defer -->
+     <!-- <script src="/src/js/script.js" defer></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ex01</title>
 </head>
 <body>
     <h1>exemplo 01</h1>
+    <script>console.log("hello word")</script>
 </body>
 </html>
