--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>exemplo 01</h1>
     <script>console.log("hello word")</script>
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
